# Visualizing-Spotify-Data

./: .cache-willfurtado  .gitignore  2020 Recap.ipynb  EDA Winter 2020.ipynb  PCA, K-Means Clustering Play.ipynb  Playlist Analysis.ipynb  README.md  Spotify EDA.ipynb  Spotify Music PCA, k-Means.ipynb  Spotify Web API.ipynb  SpotifyFeatureEngineering.ipynb  SpotifyTrackOrganizer.ipynb  index.md  pyproject.toml  uri_script.py
.ipynb_checkpoints/: Playlist Analysis-checkpoint.ipynb  Spotify EDA-checkpoint.ipynb  Spotify Web API-checkpoint.ipynb
data/playlists/: 1,3,7-Trimethylpurine-2,6-dione  5:12  Barrio de Salamanca  Corbet's  Ethereal(ity)  Flow State  Hagoromo  Homeostasis  Hydroplane  I think I got my swagger back  In Due Time  Isa   Metamorphoses  Nonlinear Dynamical System  (+12 more)
docs/: Spotify Web API.html
feature_data/: features.csv
html_files/: Playlist Analysis.html  Spotify EDA.html  Spotify Music PCA, k-Means.html
music_predictor/: .cache-sadiethompsn  .cache-willfurtado  api_access.py  music_prediction_model.py  secrets.py  spotify_personal_data.py  track_features.py
notebooks/: .cache  SpotifyAPI.ipynb  SpotifyClustering.ipynb  SpotifyEDA.ipynb  SpotifyFeatureEngineering.ipynb  SpotifyPlaylistComparator.ipynb  SpotifyStreaming.ipynb  SpotifyTrackOrganizer.ipynb  credentials.py  spotify
personal_data/: Inferences.json  Playlist1.json  StreamingHistory0.json
playlists/: Corbet's  Hydroplane  Ibid.  Isa   Nonlinear Dynamical System  On Late 20th Century Romantic Comedies  Saint Tropez  Supa hot fire  Écouter c'est se souvenir
src/: uri_script.py
(+34 files in other folders)
