[tool.poetry]
name = "visualizing-spotify-data"
version = "0.1.0"
description = "Data Science Module for Spotify Listening Data"
authors = ["William Furtado <willfurtado@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^0.24.2"
seaborn = "^0.11.1"
matplotlib = "^3.4.2"
spotipy = "^2.18.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
